--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "formik": "^2.4.2",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
