--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
