--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "yup": "^1.2.0"
